<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#9F9A9A"
    tools:ignore="MissingDefaultResource">

    <ImageView
        android:id="@+id/logo_imageView"
        android:layout_width="265dp"
        android:layout_height="200dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="102dp"
        android:layout_marginRight="54dp"
        app:layout_constraintHorizontal_bias="0.634"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_login"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Login"

        android:textSize="22sp"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_imageView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edituser"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="386dp"
        android:layout_marginRight="54dp"
        android:drawableLeft="@drawable/ic_user"
        android:drawablePadding="30dp"
        android:hint="@string/hint_UserName"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="54dp"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="30dp"
        android:hint="@string/hint_Password"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edituser" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="60dp"
        android:backgroundTint="?attr/itemBackground"
        android:drawablePadding="20dp"
        android:hint="@string/strinto"
        android:textColorHint="#FBF8F8"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editPassword" />

    <TextView
        android:id="@+id/tvNotieneCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/strNoTieneCuenta"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

    <TextView
        android:id="@+id/tvCreaUnaAqui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/strCreaUna"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/tvNotieneCuenta"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>